[tool.poetry]
name = "pix2pix"
version = "0.1.0"
description = "Satellite to Map image"
authors = ["John Naylor <jonaylor89@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
keras = "^2.3.1"
tensorflow = "^2.1.0"
Pillow = "^7.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
